--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,42 @@
+# Node
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Build outputs
+dist/
+build/
+/.parcel-cache/
+
+# OS files
+.DS_Store
+Thumbs.db
+desktop.ini
+
+# Editor directories and files
+.vscode/
+.idea/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+
+# Environment files
+.env
+.env.local
+.env.*.local
+
+# Logs
+*.log
+
+# Python virtual envs
+venv/
+.venv/
+
+# Misc
+.cache/
+*.pem
 ### AL ###
 #Template for AL projects for Dynamics 365 Business Central
 #launch.json folder
